--- a/package.json
+++ b/package.json
@@ -28,6 +28,10 @@
   },
   "homepage": "https://github.com/sarangraj/RASPBX#readme",
   "dependencies": {
-    "bootstrap": "^3.3.7"
+    "bootstrap": "^3.3.7",
+    "express": "^4.14.0",
+    "express-session": "^1.14.2",
+    "jquery": "^3.1.1",
+    "mysql": "^2.12.0"
   }
 }
